@@ -12,7 +12,7 @@ import java.util.stream.Collectors;
  * @3 = @1 + @2     =>   Instruction.newOp("addl @1, @3", new int[] { 1 }, Optional.of(2), 3)
  *
  * @1 < @2          =>   Instruction.newInput("cmpl @1, @2", new int[] { 1, 2 })
- *                       Instruction.newJmp("jl .L<blockId>", <blockId>)
+ *                       Instruction.newJmp("jl ???", ???)   TODO: define ???
  *
  * *(@1 + 4) = @2   =>   Instruction.newInput("movl @2, 4(@1)", new int[] { 2, 1 })
  *
@@ -55,14 +55,11 @@ public class Instruction {
      * List of instructions (within the same block) that must be
      * executed before this instruction
      *
-     * TODO: do we even want to use this?
+     * TODO: is an integer appropriate to identify an instruction in the intermediate language?
      */
     @Getter
     private List<Integer> dataDependencies;
-
-    /**
-     * The block id of the target of a jump.
-     */
+    // TODO: how to represent jump targets? reference to the according block?
     @Getter
     private Optional<Integer> jumpTarget;
 
@@ -81,6 +78,7 @@ public class Instruction {
             assert overwriteRegister.isEmpty() || reg != overwriteRegister.get();
             assert targetRegister.isEmpty() || reg != targetRegister.get();
         }
+        // TODO: check whether all used registers are in text (and vice-versa?)
 
         this.type = type;
         this.text = text;
@@ -112,6 +110,7 @@ public class Instruction {
             suffix = String.format(" /* overwrite: @%d */", overwriteRegister.get());
         }
         return text + suffix;
+        // TODO: output data dependencies and jump target?
     }
 
     // ==== some helper methods for simplifying construction ====
@@ -142,10 +141,14 @@ public class Instruction {
     /**
      * (implicit) input and data dependency of a jump is the last executed conditional
      */
-    public static Instruction newJmp(String text, int targetBlockId) {
-        return new Instruction(InstructionType.GENERAL, text, List.of(),
+    public static Instruction newJmp(String text, Optional<Integer> condInstruction) {
+        List<Integer> dataDeps = new ArrayList<>();
+        if (condInstruction.isPresent()) {
+            dataDeps.add(condInstruction.get());
+        }
+        return new Instruction(InstructionType.GENERAL, text, Collections.emptyList(),
                 Optional.empty(), Optional.empty(),
-                new ArrayList<>(), Optional.of(targetBlockId));
+                dataDeps, Optional.empty());
     }
 
     /**
@@ -153,10 +156,10 @@ public class Instruction {
      */
     public static Instruction newRet(Optional<Integer> returnRegister) {
         String text = "ret";
-        List<Integer> input = List.of();
+        List<Integer> input = Collections.emptyList();
         if (returnRegister.isPresent()) {
             text += String.format(" @%d", returnRegister.get());
-            input = List.of(returnRegister.get());
+            input = Arrays.asList(returnRegister.get());
         }
         return new Instruction(InstructionType.RET, text, input,
                 Optional.empty(), Optional.empty(),
@@ -165,22 +168,22 @@ public class Instruction {
 
     public static Instruction newDiv(int dividend, int divisor, int result) {
         String text = String.format("div @%d, @%d, @%d", dividend, divisor, result);
-        return new Instruction(InstructionType.DIV, text, List.of(dividend, divisor),
+        return new Instruction(InstructionType.DIV, text, Arrays.asList(dividend, divisor),
                 Optional.empty(), Optional.of(result),
                 new ArrayList<>(), Optional.empty());
     }
 
     public static Instruction newMod(int dividend, int divisor, int result) {
         String text = String.format("mod @%d, @%d, @%d", dividend, divisor, result);
-        return new Instruction(InstructionType.MOD, text, List.of(dividend, divisor),
+        return new Instruction(InstructionType.MOD, text, Arrays.asList(dividend, divisor),
                 Optional.empty(), Optional.of(result),
                 new ArrayList<>(), Optional.empty());
     }
 
     public static Instruction newCall(List<Integer> args, Optional<Integer> result, String callReference) {
-        String text = String.format("call \"%s\"", callReference);
+        String text = "call";
         for (int arg: args) {
-            text += ", @" + arg;
+            text += " @" + arg + ",";
         }
         if (result.isPresent()) {
             text += " -> @" + result.get();
